# ulco-gl2-etudiant

./: .gitignore  README.md
tp-ci-github/masuperapp/: CMakeLists.txt  README.md  default.nix
tp-ci-github/masuperdoc/: book.toml  default.nix
tp-ci-github/masuperdoc/src/: SUMMARY.md  cli.md  gui.md  installation.md  introduction.md
tp-ci-github/masuperlib/: README.md  default.nix
tp-ci-github/monsuperserveur/: README.md  default.nix  monsuperserveur.cabal
tp-ci-github/monsupersite/: index.md
tp-ci-gitlab/masuperapp/: .gitlab-ci.yml  CMakeLists.txt  default.nix  main.cpp  release.nix
tp-ci-gitlab/masuperdoc/: .gitlab-ci.yml  index.html
tp-ci-gitlab/masuperlib/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile
tp-ci-gitlab/masuperlib/include/: mainpage.hpp
tp-ci-gitlab/masuperlib/src/masuperlib/: masuperlib.cpp
tp-ci-gitlab/masuperlib/test/masuperlib/: masuperlib-test.cpp
tp-ci-gitlab/monsuperserveur/: .gitlab-ci.yml
tp-ci-gitlab/monsuperserveur/app/: Main.hs
tp-ci-gitlab/monsuperserveur/test/: LibSpec.hs
tp-ci/masuperapp/: default.nix  index.md
tp-ci/masuperdoc/: .gitlab-ci.yml  default.nix  index.html
tp-ci/masuperdoc/source/: conf.py  index.rst
tp-ci/masuperlib/: .gitignore  default.nix
tp-ci/monsuperserveur/: default.nix  docker.nix  monsuperserveur.cabal
tp-ci/monsuperserveur/.github/workflows/: docker.yml
tp-ci/monsuperserveur/app/: Main.hs
tp-ci/monsupersite/: index.md
tp-ci/multisdl/: Makefile  shell-native.nix  shell-wasm.nix
tp-ci/multisdl/app/: main.cpp
tp-ci/multisdl/src/: Scene.cpp  Scene.hpp  UiSdl.cpp  UiSdl.hpp
tp-ci/multisdl/test/: Scene-test.cpp
tp-ci/multisdl/wasm/: index.html  main.cpp
tp-ci/remotemul2/: .gitlab-ci.yml  default.nix  docker.nix  hie.yaml  remotemul2.cabal
tp-ci/remotemul2/app/: Main.hs
tp-ci/remotemul2/src/: Lib.hs
tp-clientserver/broadcaster/: broadcaster.cabal  default.nix  hie.yaml
tp-clientserver/broadcaster/app/server/: Main.hs
tp-clientserver/chat/: default.nix  hie.yaml
tp-clientserver/cpp/broadcast/: CMakeLists.txt  Net.hpp  default.nix  server.cpp
tp-clientserver/cpp/chat/: CMakeLists.txt  Net.hpp  client.cpp  default.nix  gui.cpp  server.cpp
tp-clientserver/cpp/echo/: CMakeLists.txt  client.cpp  default.nix  server.cpp
tp-clientserver/echo/: client.html  default.nix  hie.yaml
tp-clientserver/game/: default.nix  game.cabal  hie.yaml
tp-clientserver/game/app/client/: Main.hs
tp-clientserver/game/app/server/: Main.hs  Model.hs
tp-clientserver/game/src/: Game.hs
tp-clientserver/hs/chat/: chat.cabal
tp-clientserver/hs/echo/: client.html  echo.cabal
tp-ffi/electron-fibo/: Makefile  README.md  index.html  main.js  package.json  shell.nix
tp-ffi/hs-c/: Makefile  default.nix  myapp.cabal  myapp.hs  mymath.c  mymath.h
tp-ffi/hs-js1/: app.cabal  hello.hs  shell.nix
tp-ffi/hs-js2/: Makefile  README.md  app.cabal  shell1.nix  shell2.nix
tp-ffi/hs-js2/src/: myapp.hs
tp-ffi/hs-js2/static/: index.html
tp-ffi/node-fibo1/: README.md  fibo1.js  fibo2.js  test_fibo.js
tp-ffi/node-fibo2/: Makefile  package.json  shell.nix  test_fibo.js
tp-ffi/node-fiboweb/: Makefile  index.html  package.json  server.js  shell.nix
tp-ffi/py-fibo1/: default.nix  setup.py  shell.nix
tp-ffi/py-fibo1/mypackage/: myfibo.py
tp-ffi/py-fibo2/: default.nix  setup.py  shell.nix
tp-ffi/py-fibo2/cpp/: myfibo.cpp
tp-ffi/py-fibo2/scripts/: main1.py  main2.py  main3.py
tp-ffi/py-logger/: default.nix  setup.py  shell.nix
tp-ffi/py-logger/cpp/: Logger.cpp  Logger.hpp  LoggerBinding.cpp
tp-ffi/py-logger/scripts/: main1.py
tp-ffi/web-fibo1/: repeat.js  test_fibo.html  test_repeat.html
tp-ffi/web-fibo2/: fibo.js  plot_fibo.html
tp-ffi/web-fibo3/: Makefile  fibo.cpp  index1.html  index2.html  shell.nix
tp-ffi/web-sinus/: Makefile  index.html  shell.nix  sinus.cpp
tp-mvc/naze-cpp/: CMakeLists.txt  default.nix
tp-mvc/naze-cpp/app/: UiSdl.cpp  UiSdl.hpp  naze-cli.cpp  naze-gui.cpp
tp-mvc/naze-cpp/src/: Board.cpp  Board.hpp
tp-mvc/naze-cpp/test/: Board-test.cpp
tp-mvc/naze-cpp/wasm/: Makefile  app.cpp  index.html  shell.nix
tp-mvc/naze-hs/: default.nix  hie.yaml  naze.cabal
tp-mvc/naze-hs/app/: naze-cli.hs  naze-gui.hs
tp-mvc/naze-hs/src/: Model.hs
tp-mvc/naze-hs/test/: ModelSpec.hs
tp-mvc/todolist-cpp/: CMakeLists.txt  README.md  default.nix
tp-mvc/todolist-cpp/app/: main.cpp
tp-mvc/todolist-cpp/include/todolist-cpp/: Task.hpp
tp-mvc/todolist-cpp/src/todolist-cpp/: Task.cpp
tp-mvc/todolist-cpp/test/todolist-cpp/: Task-test.cpp
tp-mvc/todolist-hs/: default.nix  hie.yaml  todolist.cabal
tp-mvc/todolist-hs/app/: Main.hs
tp-mvc/todolist-hs/src/: Board.hs  Task.hs  View.hs
tp-refactoring/board1/: CMakeLists.txt  default.nix
tp-refactoring/board1/src/: Board.hpp  Log.hpp  Tasks.hpp  main.cpp
tp-refactoring/log-cpp/: CMakeLists.txt  Makefile  default.nix  main0.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
tp-refactoring/log-hs/: default.nix  hie.yaml  log-hs.cabal
tp-refactoring/log-hs/app/: Main.hs
tp-refactoring/matrix/: default.nix
tp-refactoring/matrix1/: CMakeLists.txt
tp-refactoring/matrix1/include/matrix/: matrix.hpp
tp-refactoring/mul2js/: index1.html  script1.js
tp-refactoring/sqrt-hs/: default.nix  hie.yaml  sqrt-hs.cabal
tp-refactoring/sqrt-hs/app/: Main.hs
tp-refactoring/sqrt-hs/src/: Lib.hs
tp-refactoring/sqrt-hs/test/: LibSpec.hs
tp-refactoring/store/: Makefile
tp-refactoring/store1/: CMakeLists.txt  default.nix  store1.cpp
tp-solid/board/: CMakeLists.txt  default.nix
tp-solid/canevas/: CMakeLists.txt  default.nix
tp-workflow/: .gitignore  .gitlab-ci.yml  README.md  default.nix  index.html  setup.py  shell.nix
tp-workflow/cpp/: CMakeLists.txt  Doxyfile  Tictactoe.cpp  Tictactoe.hpp  TictactoeTest.cpp  default.nix  mainpage.hpp  tictactoe-cli.cpp  tictactoe-test.cpp
tp-workflow/cpp/src/: Tictactoe.cpp  Tictactoe.hpp  TictactoeBinding.cpp  TictactoeTest.cpp
tp-workflow/js/: Makefile  TictactoeBinding.cpp  gui.js  index.html  shell.nix  style.css
tp-workflow/scripts/: tictactoe_gui.py
(+29 files in other folders)
