cabal-version:      2.2
name:               monsuperserveur
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Lib

executable monsuperserveur
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      monsuperserveur, lucid, scotty

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      monsuperserveur, hspec
    other-modules:      LibSpec

