cabal-version:      2.2
name:               broadcaster
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, bytestring, text, websockets

executable broadcaster-server
    import:             deps
    hs-source-dirs:     app/server
    main-is:            Main.hs
    other-modules:      Net

executable broadcaster-client
    import:             deps
    hs-source-dirs:     app/client
    main-is:            Main.hs

