name:               app
version:            0.1
build-type:         Simple
cabal-version:      >=1.10

executable hello
    main-is:            hello.hs
    default-language:   Haskell2010
    ghc-options:        -O2 -threaded
    ghcjs-options:      -dedupe
    cpp-options:        -DGHCJS_BROWSER
    if impl(ghcjs)
        build-depends:  base
    else
        buildable:      False

