cabal-version:      2.2
name:               naze
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, array

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Model

executable naze-gui
    import:             deps
    hs-source-dirs:     app
    main-is:            naze-gui.hs
    build-depends:      naze, gloss

executable naze-cli
    import:             deps
    hs-source-dirs:     app
    main-is:            naze-cli.hs
    build-depends:      naze

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      naze, hspec
    other-modules:      ModelSpec

