cabal-version:      2.2
name:               todolist
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Board, Task, View

executable todolist
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      todolist

