cabal-version:      2.2
name:               log-hs
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

executable log-hs
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs

