cabal-version:      2.2
name:               sqrt-hs
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, hspec

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Lib

executable sqrt-hs
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      sqrt-hs

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      sqrt-hs
    other-modules:      LibSpec

